# TERA-Europe-ClassicPlus-Launcher

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  builder.ps1  license.txt  tera-mods-research.json
.github/workflows/: cargo-audit.yml  deploy.yml  pr-validation.yml  secret-scan.yml  tauri-windows.yml
.specs/prd/: README.md  acceptance-criteria.md  mod-manager-production.md  ralph-loop-instructions.md  test-plan.md
docs/: CHANGELOG.md
docs/PRD/: fix-plan.md  lessons-learned.archive.md  lessons-learned.md  loop-prompt.md  mod-manager-perfection.md  setup-audit-log.md
docs/mod-manager/: ARCHITECTURE.md  CATALOG-LIFECYCLE-MATRIX.md  CATALOG-SEED.md  DESIGN.md  FORK-SETUP.md  GPK-PATCH-MIGRATION.md  TROUBLESHOOT.md  WAVE-QUEUE.md
docs/mod-manager/audits/: foglio-paperdoll-resource-blocker.md  gpk-catalog-audit.md  gpk-publish-rebuild-queue.md
docs/mod-manager/research/: tera-gpk-modding-deep-dive.md
docs/mod-manager/reviews/: boss-window-v100-review.md  character-window-cleaned-v100-review.md  community-window-v100-review.md  flight-gauge-v100-review.md  message-window-cleaned-v100-review.md  targetinfo-restyle-v100-review.md  wave-b-strategy.md  (+2 more)
docs/plans/: 2026-01-27-launcher-stability.md  2026-01-27-refactor-wiring-design.md  2026-01-27-refactor-wiring-implementation.md  2026-01-27-refactor-wiring-map.md  2026-02-02-multi-account-implementation.md  2026-02-02-multi-account-system-design.md
scripts/: audit.sh  check-bundle-size.mjs  check-bundle-size.test.mjs  check-changelog-plain-english.mjs  check-changelog-plain-english.test.mjs  check-mods-crate-docs.mjs  check-mods-crate-docs.test.mjs  check-troubleshoot-coverage.mjs  check-troubleshoot-coverage.test.mjs  foglio-batch-port.py  inspect-unported.py  strip-redundant-allows.py
temp-project/: package-lock.json
temp-project/app/: globals.css  layout.tsx  page.tsx
teralaunch/: DESIGN.md  README.md  config.ini  libtest_safe_hwnd.rlib  package-lock.json  package.json  playwright.config.js  vitest.config.js
teralaunch/docs/: classicplus-sandbox-audit.md
teralaunch/src/: accountManager.js  app.js  app.js.manual_backup  app.test.js  home.html  index.css  index.html  login.css  login.html  markdown.js  mirror.html  mirror.js  modern.css  mods.css  mods.html  mods.js  register.html  router.js  styles.css  translations.json  zoom.js
teralaunch/src-tauri/: COVERAGE_EXCLUSIONS.md  Cargo.toml  audit.toml  build-config.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
teralaunch/src-tauri/capabilities/: migrated.json
teralaunch/src-tauri/src/: detect.rs  main.rs  s1_events.rs  tera_config.ini
teralaunch/src-tauri/src/TERA/: readme.txt
teralaunch/src-tauri/src/commands/: auth.rs  config.rs  download.rs  game.rs  hash.rs  mod.rs  mods.rs  util.rs
teralaunch/src-tauri/src/domain/: constants.rs  errors.rs  mod.rs  models.rs  payloads.rs
teralaunch/src-tauri/src/infrastructure/: cache.rs  events.rs  filesystem.rs  http.rs  mod.rs
teralaunch/src-tauri/src/mirror/: broadcaster.rs  client.rs  crypto.rs  mod.rs
teralaunch/src-tauri/src/services/: auth_service.rs  config_service.rs  download_service.rs  game_service.rs  hash_service.rs  mod.rs  patch_source.rs  self_integrity.rs  updater_gate.rs
teralaunch/src-tauri/src/services/mods/: catalog.rs  catalog_audit.rs  composite_author.rs  composite_extract.rs  dds.rs  external_app.rs  gpk.rs  gpk_dropin_install.rs  gpk_package.rs  gpk_patch_applier.rs  gpk_patch_deploy.rs  gpk_property.rs  gpk_resource_inspector.rs  gpk_transform.rs  manifest_store.rs  mapper_extend.rs  mod.rs  patch_derivation.rs  patch_manifest.rs  registry.rs  test_fixtures.rs  texture_encoder.rs  tmm.rs  tmm_wrap.rs  types.rs  vanilla_resolver.rs
teralaunch/src-tauri/src/state/: auth_state.rs  deep_link_state.rs  download_state.rs  mod.rs  mods_state.rs
teralaunch/src-tauri/src/utils/: bytes.rs  mod.rs  path.rs  retry.rs
teralaunch/src-tauri/tests/: add_mod_from_file_wiring.rs  anti_reverse_guard.rs  architecture_doc_guard.rs  audits_units_coverage.rs  bogus_gpk_footer.rs  changelog_guard.rs  classicplus_guards_scanner_guard.rs  claude_md_guard.rs  clean_recovery.rs  conflict_modal.rs  consent_commands_guard.rs  crash_recovery.rs  crate_comment_guard.rs  csp_audit.rs  deploy_scope_infra_guard.rs  disk_full.rs  every_catalog_entry_lifecycle.rs  gpk_catalog_audit_cli.rs  gpk_composite_redirect.rs  gpk_dropin_install.rs  gpk_header_transform.rs  gpk_install_pipeline_e2e.rs  gpk_patch_converter_cli.rs  gpk_property_parse.rs  gpk_transform_x32_to_x64.rs  http_allowlist.rs  http_redirect_offlist.rs  i18n_no_hardcoded_guard.rs  i18n_scanner_guard.rs  lessons_learned_guard.rs  meta_hygiene_guard.rs  mods_categories_ui_scanner_guard.rs  multi_client.rs  offline_banner_scanner_guard.rs  parallel_install.rs  portal_https_guard.rs  prd_path_drift_guard.rs  search_perf_guard.rs  secret_scan_guard.rs  self_integrity.rs  (+7 more)
teralaunch/src-tauri/tests/common/: mod.rs
teralaunch/src-tauri/tests/fixtures/: catalog-snapshot.json
teralaunch/tests/: accountManager.test.js  app.test.js  builder-guards.test.js  classicplus-guards.test.js  coverage-utils.test.js  deploy_scope.spec.js  forumLinks.test.js  i18n-jargon.test.js  i18n-no-hardcoded.test.js  i18n-parity.test.js  launch-mod-updates.test.js  launcher-update-toast.test.js  markdown.test.js  mods-categories-ui.test.js  mods-detail-render.test.js  mods-dom-perf.test.js  mods-keyboard-contract.test.js  mods-reduced-motion.test.js  mods-tab-order.test.js  mods-ui-regressions.test.js  mods-update-check.test.js  offline-banner.test.js  router.test.js  search-perf.test.js  shell-open-callsite.test.js  utils.test.js  window-dragging.test.js
teralib/: Cargo.toml  audit.toml  build.rs
teralib/.cargo/: config.toml
teralib/src/: _serverlist_proto.rs  anti_debug.rs  config.rs  global_credentials.rs  lib.rs  main.rs  serverlist.proto
teralib/src/av/: mod.rs
teralib/src/config/: config.json
teralib/src/game/: mod.rs
teralib/src/injection/: mod.rs
tools/enrich-catalog/: .gitignore  README.md  enrich.py  patch-date-map.json
(+73 files in other folders)
