[package]
name = "teralib"
version = "0.1.0"
edition = "2021"

[lib]
name = "teralib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]



[[bin]]
name = "tera_launcher"
path = "src/main.rs"



[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "winuser", "libloaderapi", "windef", "minwindef", "handleapi", "synchapi", "errhandlingapi", "winbase", "tlhelp32"] }
protobuf = "3.7.2"
lazy_static = "1.4.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-macros = "2.2.0"
log = "0.4.22"
env_logger = "0.11.3"
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.120"
once_cell = "1.19"
dotenv = "0.15.0"
sha2 = "0.10"
litcrypt = "0.4"
cryptify = "3.1.1"

[features]
# When enabled, embed terainject32.exe bytes compiled at the given path.
# Falls back to searching on disk if not found at runtime.
embed_helper = []
# When enabled, embed agnitor.dll bytes compiled at the given path and extract at runtime
embed_agnitor = []

[build-dependencies]
prost-build = "0.12.6"
