[package]
name = "tera-europe-launcher"
version = "1.7.5"
description = "A Tauri App"
authors = ["TNC97"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
toml = "0.8"

[dependencies]
tauri = { version = "1.0", features = ["api-all", "updater", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-macros = "2.2.0"
log = "0.4.22"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10.8"
base64 = "0.22"
getrandom = { version = "0.2", features = ["std"] }
hex = "0.4"
cryptify = "3.1.1"
chamox = "0.1.4"
zeroize = "1.7"
teralib = { path = "../../teralib" }
reqwest = { version = "0.12.23", features = ["json", "stream", "gzip"] }
reqwest_cookie_store = "0.8.0"
lazy_static = "1.4.0"
rust-ini = "0.21.0"
futures-util = "0.3.31"
indicatif = "0.17.8"
walkdir = "2.5.0"
rayon = "1.10.0"
thiserror = "1.0.63"
env_logger = "0.10.0"
devtools = "0.3.3"
tracing = "0.1"
dotenvy = "0.15"
cookie = "0.16"
regex = "1.11.1"
dirs-next = "2"
chrono = { version = "0.4", features = ["clock"] }
faster-hex = "0.9"
netstat2 = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }



[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
custom-menu = []
