[package]
name = "tera-europe-classicplus-launcher"
version = "0.1.25"
description = "TERA Europe Classic+ Launcher"
authors = ["TNC97"]
edition = "2021"
default-run = "tera-europe-classicplus-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
toml = "0.8"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-macros = "2.2.0"
log = "0.4.22"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10.8"
base64 = "0.22"
getrandom = { version = "0.2", features = ["std"] }
hex = "0.4"
cryptify = "3.1.1"
chamox = "0.1.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
teralib = { path = "../../teralib" }
reqwest = { version = "0.12.23", features = ["json", "stream", "gzip"] }
reqwest_cookie_store = "0.8.0"
lazy_static = "1.4.0"
rust-ini = "0.21.0"
futures-util = "0.3.31"
indicatif = "0.17.8"
walkdir = "2.5.0"
rayon = "1.10.0"
thiserror = "1.0.63"
env_logger = "0.10.0"
tracing = "0.1"
dotenvy = "0.15"
cookie = "0.16"
regex = "1.11.1"
url = "2"
dirs-next = "2"
chrono = { version = "0.4", features = ["clock"] }
semver = "1"
faster-hex = "0.9"
netstat2 = "0.9"
flate2 = "1.1.8"
lzokay = { version = "2.0.1", default-features = false, features = ["compress", "decompress", "std"] }
zip = { version = "2.3", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser", "processthreadsapi", "errhandlingapi", "handleapi", "synchapi", "winbase", "winnt", "minwindef", "windef"] }
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"



[dev-dependencies]
tempfile = "3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
custom-menu = []
skip-updates = []  # Skip file verification; allow game launch without updates

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

# Release optimizations - balance size and performance
[profile.release]
opt-level = 3         # Full optimization for performance
lto = true            # Link-Time Optimization (reduces size AND improves perf)
codegen-units = 1     # Better optimization (slightly slower compile)
panic = "abort"       # Smaller binary, faster panics
strip = true          # Strip symbols (~1-2MB smaller)
